Se agrega extension para configurar customer data en backoffice

--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
@@ -76,14 +76,14 @@ type.Customer.documentType.name=Document Type
 type.Customer.firstName.name=First Name
 type.Customer.middleName.name=Middle Name
 type.Customer.secondLastName.name=Second Last Name
-ype.Customer.secondLastName.name=Last Name
+ype.Customer.lastName.name=Last Name
 type.Customer.documentExpeditionDate.name=Document Expedition Name
 type.Customer.sex.name=Sex
 type.Customer.nationality.name=Nationality
 type.Customer.birthDate.name=Birth Date
 type.Customer.birthPlace.name=Birth Place
 type.Customer.originCountry.name=Origin Country
-type.Customer.useEmailForNotification.name=User Email For Notifications
+type.Customer.useEmailForNotifications.name=User Email For Notifications
 type.Customer.useInformationForInstitutionalPurposes.name=Use Information For Institutional Purposes.
 type.Customer.numBP.name=Num. BP
 type.Customer.sdhType.name=Type
@@ -92,7 +92,10 @@ type.Customer.nameOrg1.name=Name Org 1
 type.Customer.nameOrg2.name=Name Org 2
 type.Customer.nameOrg3.name=Name Org 3
 type.Customer.nameOrg4.name=Name Org 4
-type.Customer.addrressList.name=Addresses
+type.Customer.digVer.name=Dig. Ver.
+type.Customer.legalEntity.name=Legal Entity
+type.Customer.legalOrg.name=Legal Org
+type.Customer.addressList.name=Addresses
 type.Customer.phoneList.name=Phones
 type.Customer.agentList.name=Agents
 type.Customer.networkList.name=Social Networks
