--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -75,7 +75,7 @@ type.Customer.documentNumber.name=Número de Documento
 type.Customer.documentType.name=Tipo de Documento
 type.Customer.firstName.name=Primer Nombre
 type.Customer.middleName.name=Segundo Nombre
-type.Customer.secondLastName.name=Primer Apellido
+type.Customer.lastName.name=Primer Apellido
 type.Customer.secondLastName.name=Segundo Apellido
 type.Customer.documentExpeditionDate.name=Fecha de Expedición del Documento
 type.Customer.sex.name=Sexo
@@ -83,7 +83,7 @@ type.Customer.nationality.name=Nacionalidad
 type.Customer.birthDate.name=Fecha de Nacimiento
 type.Customer.birthPlace.name=Lugar de Nacimiento
 type.Customer.originCountry.name=País de Origen
-type.Customer.useEmailForNotification.name=Usar Email Para Recibir Notificaciones
+type.Customer.useEmailForNotifications.name=Usar Email Para Recibir Notificaciones
 type.Customer.useInformationForInstitutionalPurposes.name=User Información para Fines Institucionales
 type.Customer.numBP.name=Num. BP
 
@@ -93,7 +93,10 @@ type.Customer.nameOrg1.name=Nombre Org 1
 type.Customer.nameOrg2.name=Nombre Org 2
 type.Customer.nameOrg3.name=Nombre Org 3
 type.Customer.nameOrg4.name=Nombre Org 4
-type.Customer.addrressList.name=Direcciones
+type.Customer.digVer.name=Dig. Ver.
+type.Customer.legalEntity.name=Legal Entity
+type.Customer.legalOrg.name=Legal Org
+type.Customer.addressList.name=Direcciones
 type.Customer.phoneList.name=Teléfonos
 type.Customer.agentList.name=Agentes
 type.Customer.networkList.name=Redes Sociales
