--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1380,6 +1380,18 @@ text.account.profile.updateForm=Use este formulario para actualizar los detalles
 text.account.profile.updatePassword=Use este formulario para actualizar la contraseña de la cuenta.
 text.account.profile.updatePersonalDetails.mobile=Tratar
 text.account.profile.updateProfile.mobile=Actualizar perfil
+text.account.profile.presendecla= Presentar Declaración
+text.account.profile.gasolina= Sobretasa Gasolina
+text.account.profile.gasolina.declaracion= Declaración Sobretasa Gasolina
+text.account.profile.certipagos= Certificación de pagos
+text.account.profile.declarafirm= Lista de Declaraciones a Firmar
+text.account.profile.delineacion= Delineación Urbana
+text.account.profile.buzon= Mi Buzón
+text.account.profile.oblipendienetes= Obligaciones Pendientes
+text.account.profile.relapagos= Relación de Pagos
+text.account.profile.vehiculos= Sobre Vehículos
+text.account.profile.estadocuenta= Estado de Cuenta
+text.account.profile.declarapublicidad= Declaración Publicidad Exterior
 text.account.savedCart.id=ID
 text.account.savedCart.dateSaved=Fecha grabada
 text.account.savedCart.description=Descripción
