Ajustes para impresion de pago en PSE

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3370,6 +3370,9 @@ mirit.certificacion.opPublicidadExterior=Publicidad Exterior
 mirit.certificacion.opSobretasaGasolina=Sobretasa Gasolina
 mirit.certificacion.opDelineaciónUrbana=Delineación Urbana 
 mirit.certificacion..error.pdfVacio=No se encontro el archivo de certificado seleccionado.
+
+
+
 #->FIN dev-eduardo 20/01/2019 textos para Mi RIT Certificacion
 
 #->INI dev-federico 17/01/2019 textos para Sobretasa Gasolina
@@ -3405,6 +3408,9 @@ impuestos.decGasolina.Pagos.valorSanciones = Valor sanciones
 impuestos.decGasolina.Pagos.valorIntereses = Valor intereses de Mora
 impuestos.decGasolina.Pagos.menosCompensaciones = Menos compensaciones
 impuestos.decGasolina.Pagos.valorTotalPagar = Valor total a Pagar
+
+
+
 
 #revisor
 impuestos.decGasolina.DatosRevisor.titulo = Datos revisor Fiscal ó Contador
@@ -3765,6 +3771,8 @@ psePaymentForm.banco=Banco
 psePaymentForm.valorAPagar=Valor a pagar
 psePaymentForm.tipoDeTarjeta=Tipo de tarjeta
 psePaymentForm.trazabilityCode=Trazability Code
+psePaymentForm.error.pdfVacio=No se encontro el archivo PDF para descargar.
+
 
 mibuzon.inicial.title= Buzón Tributario
 mibuzon.inicial.descripcion= El Buzón Tributario te mantendrá al pendiente de todas las notificaciones y mensajes sobre tus obligaciones fiscales. Conoce el  Reglamento
