Cambios en delineacion urbana

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2208,6 +2208,15 @@ delineacion.urbana.corrections.generate=Generar Declaración
 delineacion.urbana.corrections.create=Crear nueva Declaración
 delineacion.urbana.corrections.back=Atrás
 
+delineacion.urbana.radicados.question1= ¿Es una retención?
+delineacion.urbana.radicados.radicados= Radicados
+delineacion.urbana.radicados.fechradicado= Fecha Radicado
+delineacion.urbana.radicados.modlicencia= Modalidad licencia
+delineacion.urbana.radicados.seleccionar= Seleccionar
+delineacion.urbana.radicados.regresar= Regresar
+delineacion.urbana.radicados.retencion= Presentar retención
+delineacion.urbana.radicados.declaracion= Presentar declaración
+
 
 predial.unificado.title=Mis Predios
 predial.unificado.desciption=La informacion que se presenta a continuacion proviene de la Unidad Administrativa Especial de Catrasto Distrital de la oficina de Instrumentos Publicos y/o resolucion de medios magneticos. Si encuentra alguna inconsistencia por favor verifique directamente con las fuentes.
@@ -3580,58 +3589,57 @@ delineacion.urbana.adicionales.cantunida=Cantidad de Unidades
 delineacion.urbana.adicionales.areaunidad=Área por unidad
 
 delineacion.urbana.dec.generales.title=Datos Generales
-delineacion.urbana.dec.generales.anigrav=Año Gravable: 
-delineacion.urbana.dec.generales.periodo=Periodo: 
-delineacion.urbana.dec.generales.cdu=CDU
+delineacion.urbana.dec.generales.codigo= Código Delineación Urbana
+delineacion.urbana.dec.generales.anigrav=Año Gravable 
 delineacion.urbana.dec.generales.opuso=Opciones de Uso
+delineacion.urbana.dec.generales.tiplicencia=Tipo de Licencia
+delineacion.urbana.dec.generales.modlicencia=Modalidad de Licencia
+delineacion.urbana.dec.generales.cauexen=Causal de exención
+delineacion.urbana.dec.generales.radic=Radicados
 
-delineacion.urbana.dec.areasusos.title= Cuadro de Áreas y Usos
-delineacion.urbana.dec.areasusos.vivienda=Código de uso vivienda:
-delineacion.urbana.dec.areasusos.comercio=Código de uso comercio:
-delineacion.urbana.dec.areasusos.servicios=Código de uso servicios:
-delineacion.urbana.dec.areasusos.dotacional=Código de uso dotacional:
-delineacion.urbana.dec.areasusos.numunidades=Número de Unidades
-delineacion.urbana.dec.areasusos.arquitec=Áreas del proyecto Arquitectónico
-delineacion.urbana.dec.areasusos.netuso=Áreas netas por uso
-delineacion.urbana.dec.areasusos.intervenidas=Áreas Intervenidas
-delineacion.urbana.dec.areasusos.lote=Lote
-delineacion.urbana.dec.areasusos.m2=m2
-delineacion.urbana.dec.areasusos.sotano=Sótano(s)
-delineacion.urbana.dec.areasusos.semisotano=Semisótano(s)
-delineacion.urbana.dec.areasusos.pisouno=Primer piso
-delineacion.urbana.dec.areasusos.pisorestan=Pisos restantes
-delineacion.urbana.dec.areasusos.totalcons=Total construido
-delineacion.urbana.dec.areasusos.libpisouno=Libre primer piso
-delineacion.urbana.dec.areasusos.usovivi= Uso vivienda
-delineacion.urbana.dec.areasusos.vivienda= Vivienda
-delineacion.urbana.dec.areasusos.usocom=Uso comercio
-delineacion.urbana.dec.areasusos.comercio=Comercio
-delineacion.urbana.dec.areasusos.usoserv=Uso servicios
-delineacion.urbana.dec.areasusos.serv=Servicios
-delineacion.urbana.dec.areasusos.usodot=Uso dotacional
-delineacion.urbana.dec.areasusos.dot=Dot. / Instituc.
-delineacion.urbana.dec.areasusos.indus=Industria
-delineacion.urbana.dec.areasusos.otros=Otros
+
+delineacion.urbana.dec.areasusos.title= Información de Área y Uso
+delineacion.urbana.dec.areasusos.uso=Uso
+delineacion.urbana.dec.areasusos.areauso=Área de uso
+delineacion.urbana.dec.areasusos.numunidades=No. de Unidades
+delineacion.urbana.dec.areasusos.netuso=Área neta por uso
+delineacion.urbana.dec.areasusos.areainve=Área Intervenida
+delineacion.urbana.dec.areasusos.m2area=M2 Área intervenida
 delineacion.urbana.dec.areasusos.total=Total
-delineacion.urbana.dec.areasusos.ampl=Ampliada
-delineacion.urbana.dec.areasusos.modf=Modificada
-delineacion.urbana.dec.areasusos.adec=Adecuada
-delineacion.urbana.dec.areasusos.obnu=Obra nueva
-delineacion.urbana.dec.areasusos.recono=Reconocimiento
-delineacion.urbana.dec.areasusos.conserv=Conservación / Restauración
-delineacion.urbana.dec.areasusos.reforz=Reforzamiento est.
-delineacion.urbana.dec.areasusos.demo=Demolición
-delineacion.urbana.dec.areasusos.cerra=Cerramiento
+delineacion.urbana.dec.areasusos.areaproyin=Áreas del Proyecto Arquitectónico
+delineacion.urbana.dec.areasusos.netuso=Áreas netas por uso
+delineacion.urbana.dec.areasusos.aream2= Área m2
 delineacion.urbana.dec.areasusos.fechultabo= Fecha de último abono en cuenta
 delineacion.urbana.dec.areasusos.fechejec=Fecha de Ejecutoria
+delineacion.urbana.dec.areasusos.preobra= Presupuesto de Obra
+delineacion.urbana.dec.areasusos.cauexen= Causal de exención
 
-delineacion.urbana.dec.liqpriv.title=Liquidación Privada
+delineacion.urbana.dec.liqpriv.title=Liquidación
 delineacion.urbana.dec.liqpriv.totobrcons=Total Presupuesto de Obra o construcción
-delineacion.urbana.dec.liqpriv.valorcons=Valor comercial de Construcción
-delineacion.urbana.dec.liqpriv.valorret=Valor retención
-delineacion.urbana.dec.liqpriv.pag=Pago
+delineacion.urbana.dec.liqpriv.valorcons=Valor ejecutado de obra o construcción
+delineacion.urbana.dec.liqpriv.impcargo=Impuesto a Cargo
+delineacion.urbana.dec.liqpriv.totvalorsanciones=Total valor sanciones
+delineacion.urbana.dec.liqpriv.totreten=Total retención
+delineacion.urbana.dec.liqpriv.salimpcar=Saldo de impuesto a cargo
+delineacion.urbana.dec.liqpriv.salpag= Saldo a favor
+delineacion.urbana.dec.liqpriv.valpag= Valor a Pagar
+delineacion.urbana.dec.liqpriv.intermora= Interes de Mora
 delineacion.urbana.dec.liqpriv.totpag=Total a pagar
 delineacion.urbana.dec.liqpriv.calc=Calcular
+
+
+delineacion.urbana.dec.liqpriv.costdire=Costos directos de obra
+delineacion.urbana.dec.liqpriv.costindi=Costos indirectos de obra
+delineacion.urbana.dec.liqpriv.mtcons=Metros de Construcción
+delineacion.urbana.dec.liqpriv.mtventa=Metros de venta
+delineacion.urbana.dec.liqpriv.valcomcons=Valor comercial de construcción
+delineacion.urbana.dec.liqpriv.valaproxmet=Valor aproximado del metro de venta
+delineacion.urbana.dec.liqpriv.totprep= Total Presupuesto de Obra o Construcción
+delineacion.urbana.dec.liqpriv.valrete= Valor Retención
+delineacion.urbana.dec.liqpriv.pago= Pago
+delineacion.urbana.dec.liqpriv.totpag=Total a pagar
+delineacion.urbana.dec.liqpriv.calc=Calcular
+delineacion.urbana.dec.liqpriv.m2=M2
 
 delineacion.urbana.dec.firm.title=Información Firma del Declarante
 delineacion.urbana.dec.firm.tipiden=Tipo de Identificación
@@ -3640,7 +3648,9 @@ delineacion.urbana.dec.firm.nombraz=Apellidos y Nombres o Razón Social
 delineacion.urbana.dec.firm.firma=Firma
 delineacion.urbana.dec.firm.predec=Presentar Declaración
 delineacion.urbana.dec.firm.paglin=Pagar en Línea
-delineacion.urbana.dec.firm.genrop=Generar ROP
+delineacion.urbana.dec.firm.regresar=Regresar
+delineacion.urbana.dec.firm.cancelar=Cancelar
+delineacion.urbana.dec.firm.prerete= Presentar Retención
 
 sobre.vehiculos.table.title= Mis Vehículos
 sobre.vehiculos.table.descripcion= El impuesto sobre vehículos automotores grava la propiedad o posesión de los vehículos matriculados en Bogotá. Los propietarios y poseedores lo deben declarar y pagar una vez al año. La información sobre las características que se presentan a continuación proviene de la Secretaría Distrital de Movilidad de Bogotá. Si encuentra alguna inconsistencia por favor verifique directamente con esta entidad, a través del Consorcio SIM. Mas Información
