Cambios para llamada a PSE para Sobretasa a la gasolina (evitar refrescar pantalla de Liquidador de gasolina)

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3448,6 +3448,7 @@ impuestos.decGasolina.Pago.PresentarDec = Presentar Declaración
 impuestos.decGasolina.Pago.Pagar = Pagar en línea
 impuestos.decGasolina.Pago.Regresar = Regresar
 impuestos.decGasolina.Pago.nota = *Nota: Recordar que el pago de este impuesto, únicamente podrá ser pagado mediante el pago en línea
+impuestos.decGasolina.Pago.redireccionandoPSE = Redireccionando automáticamente a pago PSE
 
 #sobretasa a gasolina
 #menu
@@ -3503,7 +3504,7 @@ impuestos.presentarDeclaracion.PresentarDeclaracion = Presentar Declaración
 #->FIN dev-federico 7/02/2019 textos para Presentar Declaración
 #->INI dev-federico 7/02/2019 textos para Manejo de errores en sobre tasa a gasolina
 error.impuestoGasolina.sobretasa.error1 = Error al leer detalle de gasolina {0}
-error.impuestoGasolina.sobretasa.error2 = Error al leer informacion del Contribuyente {0}
+error.impuestoGasolina.sobretasa.error2 = Error al leer informacion del Contribuyente
 error.impuestoGasolina.sobretasa.error3.attrib1 = Error al leer calculo de gasolina {0}
 error.impuestoGasolina.sobretasa.error3.attrib2 = Error al leer calculo de gasolina {0} {1}
 error.impuestoGasolina.sobretasa.error3.attrib3 = Error al leer calculo de gasolina {0} {1} {2}
