ajustes delienacion urbana de acuerdo con minuta y lista de declaraciones a firmar

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3595,6 +3595,7 @@ delineacion.urbana.dec.generales.anigrav=Año Gravable
 delineacion.urbana.dec.generales.opuso=Opciones de Uso
 delineacion.urbana.dec.generales.tiplicencia=Tipo de Licencia
 delineacion.urbana.dec.generales.modlicencia=Modalidad de Licencia
+delineacion.urbana.dec.generales.licencia=Licencia
 delineacion.urbana.dec.generales.cauexen=Causal de exención
 delineacion.urbana.dec.generales.radic=Radicados
 
