Modificaciones en Publicidad Exterior para incluir funcionalidad de PSE

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3536,6 +3536,7 @@ consultas.estadoDeCuenta.generarEstadoCuenta = Generar
 #->FIN dev-federico 11/02/2019 textos para Consulta de estado de cuenta
 impuestos.Pago.PSE.imprimirComprobante = Imprimir Comprobante
 impuestos.Pago.PSE.continuar = Continuar
+error.Pago.PSE.error1 = Error al leer detalle de pago: {0}
 
 updatePwd.token.sameOldPassword=La nueva contraseña no puede ser igual a la anterior.
 
