--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4124,3 +4124,93 @@ declarafirma.inicial.periodo= Periodo
 declarafirma.inicial.seleccionar= Seleccionar
 declarafirma.inicial.firma= Firmar
 
+ica.table.title= ICA
+ica.table.descripcionp1= El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos  Más información.
+ica.table.descripcionp2= Si Usted es obligado a estar inscrito en la Cámara de comercio de Bogotá y encuentra inconsistencias en la información, diríjase a ese organismo para el respectivo ajuste. De lo contrario deberá corregir las posibles inconsistencias a través del módulo RIT de esta Oficina Virtual.
+ica.table.tipdc= Tipo de Documento
+ica.table.nodoc= Número de Documento
+ica.table.selec= Seleccionar
+ica.table.descfac= Descarga de factura
+ica.table.predec= Presentar Declaración
+ica.table.reexfact= Reexpeción de factura
+ica.table.pse= Pago en Línea
+ica.table.rop= ROP
+ica.table.detalle= Detalle de ICA
+ica.table.selecanio= Selecciona el año gravable a consultar
+ica.table.selecper= Selecciona el periodo 
+ica.table.buscar= Buscar
+
+ica.detalle.basicos.titulo= Datos Básicos
+ica.detalle.basicos.fecceseact= Fecha cese actividades en Bogotá
+ica.detalle.basicos.feciniact= Fecha de inicio de actividades en Bogotá
+ica.detalle.basicos.contest= Cantidad de establecimientos
+ica.detalle.basicos.activ= Causal cese de actividades
+ica.detalle.basicos.regtrib= Régimen tributario
+ica.detalle.basicos.mercantil= Matrícula mercantil
+ica.detalle.basicos.codliqu= Código liquidación
+ica.detalle.basicos.organi=Organización jurídica
+ica.detalle.basicos.edomat=Estado matrícula
+
+ica.detalle.actividades.titulo= Actividades económicas
+ica.detalle.actividades.actprin= Actividad económica principal
+ica.detalle.actividades.codciiu= Código CIIU
+ica.detalle.actividades.denominacion= Denominación de actividad económica
+ica.detalle.actividades.feciniact= Fecha de inicio de actividades
+ica.detalle.actividades.fecceseact= Fecha de cese de actividades
+
+ica.detalle.estable.titulo= Establecimiento
+ica.detalle.estable.matricula= Matrícula establecimiento
+ica.detalle.estable.fecdesde= Fecha desde
+ica.detalle.estable.edomatricula= Estado matrícula
+ica.detalle.estable.fechasta= Fecha hasta
+ica.detalle.estable.valoractivo= Valor activo asociado
+ica.detalle.estable.cantidadperson= Cantidad personal ocupado
+ica.detalle.estable.nomestable= Nombre establecimiento
+ica.detalle.estable.direccion=Dirección
+ica.detalle.estable.localidad= Localidad
+ica.detalle.estable.cp= Código Postal
+ica.detalle.estable.codciiu= Código CIIU
+ica.detalle.estable.denoacti= Denominación de la actividad económica
+
+ica.detalle.economi.titulo=Datos Económicos
+ica.detalle.economi.actitotal= Activo total
+ica.detalle.economi.pasivtotal= Pasivo total 
+ica.detalle.economi.patneto= Patrimonio neto
+ica.detalle.economi.ingoper= Ingresos operacionales
+ica.detalle.economi.ingnooper= Ingresos no operacionales
+ica.detalle.economi.paspatrimonio= Pasivo patrimonio
+
+ica.detalle.marcas.titulo= Marcas
+ica.detalle.marcas.tipmarca= Tipo de marca
+ica.detalle.marcas.codmarca= Código de la marca
+ica.detalle.marcas.valexen= Valor de exención
+ica.detalle.marcas.codciiu= Código CIIU
+ica.detalle.marcas.denoacteco= Denominación de actividad económica
+ica.detalle.marcas.fecvalidezdesde= Fecha de validez desde
+ica.detalle.marcas.fecvalidezhasta= Fecha de validez hasta
+
+ica.detalle.datadicionales.titulo=Datos adicionales
+ica.detalle.datadicionales.clase= Clase identidad sin animo de lucro
+
+ica.detalle.repesentantes.titulo= Representantes
+ica.detalle.repesentantes.tipiden= Tipo de identificación
+ica.detalle.repesentantes.numident=Número de Identificación
+ica.detalle.repesentantes.nom= Nombre
+ica.detalle.repesentantes.tiprelacion= Tipo de relación
+ica.detalle.repesentantes.fecdesde= Fecha desde
+ica.detalle.repesentantes.fechasta= Fecha hasta
+ica.detalle.repesentantes.fuentdato= Fuente dato
+
+text.account.profile.ica=ICA
+
+
+
+
+
+
+
+
+
+
+
+
