--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3655,6 +3655,9 @@ delineacion.urbana.dec.firm.regresar=Regresar
 delineacion.urbana.dec.firm.cancelar=Cancelar
 delineacion.urbana.dec.firm.prerete= Presentar Retención
 
+delineacion.urbana.radicados.nota.importante= Importante: 
+delineacion.urbana.radicados.nota.demas=Si en el siguiente recuadro no aparece un radicado asociado a un CDU debe ingresar en el botón de trámites, crear trámite, modificación de la sujeción pasiva, Delineación Urbana, para agregar dicho radicado.
+
 sobre.vehiculos.table.title= Mis Vehículos
 sobre.vehiculos.table.descripcion= El impuesto sobre vehículos automotores grava la propiedad o posesión de los vehículos matriculados en Bogotá. Los propietarios y poseedores lo deben declarar y pagar una vez al año. La información sobre las características que se presentan a continuación proviene de la Secretaría Distrital de Movilidad de Bogotá. Si encuentra alguna inconsistencia por favor verifique directamente con esta entidad, a través del Consorcio SIM. Mas Información
 sobre.vehiculo.table.anigrav= Año Gravable
@@ -4203,6 +4206,8 @@ ica.detalle.repesentantes.fechasta= Fecha hasta
 ica.detalle.repesentantes.fuentdato= Fuente dato
 
 text.account.profile.ica=ICA
+
+
 
 
 
