Consiliaciones y pagina para solicitar roles en el registro

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4205,6 +4205,8 @@ ica.detalle.repesentantes.fuentdato= Fuente dato
 text.account.profile.ica=ICA
 
 
+conciliaciones.upload.messages.success=El archivo {0} ha sido procesado correctamente
+conciliaciones.upload.messages.error=El archivo {0} ha sido procesado incorrectamente
 
 
 
