Habilitacion de captcha en el login

--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
@@ -134,3 +134,6 @@ type.SDHAgent.completeName.name=Complete Name
 type.SDHAgent.internalFunction.name=Internal Function
 
 type.SDHCustomerRegistrationProcess.token.name=token
+
+type.BaseStore.captchaCheckEnabled.name=Captcha Widget Enabled
+type.BaseStore.captchaCheckEnabled.description=Captcha Widget Enabled
