--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -133,3 +133,6 @@ type.SDHAgent.documentNumber.name=Número de Documento
 type.SDHAgent.documentType.name=Tipo de Documento
 type.SDHAgent.completeName.name=Nombre Completo
 type.SDHAgent.internalFunction.name=Función Interna
+
+type.BaseStore.captchaCheckEnabled.name=Widget de captcha activado
+type.BaseStore.captchaCheckEnabled.description=Widget de captcha activado
