--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4211,6 +4211,202 @@ text.account.profile.ica=ICA
 conciliaciones.upload.messages.success=El archivo {0} ha sido procesado correctamente
 conciliaciones.upload.messages.error=El archivo {0} ha sido procesado incorrectamente
 
+ica.inicial.title=ICA
+ica.inicial.descripcion1=El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos
+ica.inicial.descripcion2=Si Usted es obligado a estar inscrito en la Cámara de comercio de Bogotá y encuentra inconsistencias en la información, diríjase a ese organismo para el respectivo ajuste. De lo contrario deberá corregir las posibles inconsistencias a través del módulo RIT de esta Oficina Virtual.
+ica.inicial.table.tipdoc=Tipo de Documento
+ica.inicial.table.numdoc=Número de Documento
+ica.inicial.table.nombre=Nombre
+
+ica.inicial.detalle.title= Detalle ICA
+ica.inicial.detalle.fecceseact= Fecha cese actividades en Bogotá
+ica.inicial.detalle.feciniact= Fecha de inicio de actividades en Bogotá
+ica.inicial.detalle.cantesta=Cantidad de establecimientos
+ica.inicial.detalle.causal=Causal cese de actividades
+ica.inicial.detalle.regimen=Regimen tributario
+ica.inicial.detalle.mat=Matrícula mercantil
+ica.inicial.detalle.codliq=Código liquidación
+ica.inicial.detalle.orgjuri=Organización jurídica
+ica.inicial.detalle.edomat=Estado matrícula
+ica.inicial.detalle.clasiden=Clase identidad sin ánimo de lucro
+
+ica.inicial.activecono.title=Actividades econónomicas
+ica.inicial.activecono.actprin=Actividad económica principal
+ica.inicial.activecono.ciiu=Código CIIU
+ica.inicial.activecono.denomi=Denominación de actividad económica
+ica.inicial.activecono.feciniact=Fecha de inicio de actividades
+ica.inicial.activecono.fecceseact=Fecha de cese de actividades
+
+ica.inicial.estableci.title=Establecimiento
+ica.inicial.estableci.nomesta=Nombre Establecimiento
+ica.inicial.estableci.direc=Dirección
+ica.inicial.estableci.loca=Localidad
+ica.inicial.estableci.matesta=Matrícula establecimiento
+ica.inicial.estableci.fecdesde=Fecha desde
+ica.inicial.estableci.edomat=Estado matrícula
+ica.inicial.estableci.fechasta=Fecha hasta
+ica.inicial.estableci.valactivo= Valor activo asociado
+ica.inicial.estableci.cantperso= Cant. Personal ocupado
+ica.inicial.estableci.codpost=Código postal
+ica.inicial.estableci.ciiu=Código CIIU
+
+ica.inicial.datecono.title=Datos económicos
+ica.inicial.datecono.actsoc=Actico total
+ica.inicial.datecono.pastot=Pasivo total
+ica.inicial.datecono.patneto=Patrimonio neto
+ica.inicial.datecono.ingoper=Ingresos no operacionales
+ica.inicial.datecono.paspat=Pasivo patrimonio
+
+ica.inicial.marcas.title=Marcas
+ica.inicial.marcas.tipmarca=Tipo de marca
+ica.inicial.marcas.caodmarca=Código de la marca
+ica.inicial.marcas.valexe=Valor de exención
+ica.inicial.marcas.ciiu=Código CIIU
+ica.inicial.marcas.denoacteco=Denominación de actividad económica
+ica.inicial.marcas.fecvaldesde=Fecha de validez desde
+ica.inicial.marcas.fecvalhasta=Fecha de validez hasta
+
+ica.inicial.representantes.title=Representantes
+ica.inicial.representantes.tipiden=Tipo de Identificación
+ica.inicial.representantes.numide=No. Identificación
+ica.inicial.representantes.nombre=Nombre
+ica.inicial.representantes.tiprela=Tipo de relación
+ica.inicial.representantes.fecdesde=Fecha desde
+ica.inicial.representantes.fechasta=Fecha hasta
+ica.inicial.representantes.regresar=Regresar
+ica.inicial.representantes.presendecla=Presentar Declaración
+ica.inicial.representantes.rop=ROP
+ica.inicial.representantes.paglinea=Pago en línea
+
+ica.propuesta.title=ICA
+ica.propuesta.descripcion1=El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos
+ica.propuesta.descripcion2=Si Usted es obligado a estar inscrito en la Cámara de comercio de Bogotá y encuentra inconsistencias en la información, diríjase a ese organismo para el respectivo ajuste. De lo contrario deberá corregir las posibles inconsistencias a través del módulo RIT de esta Oficina Virtual.
+ica.propuesta.table.tipdoc=Tipo de Documento
+ica.propuesta.table.numdoc=Número de Documento
+ica.propuesta.table.nombre=Nombre
+ica.propuesta.table.angrav= Año Gravable
+ica.propuesta.table.period=Periodo
+
+ica.propuesta.detalle.title= Detalle ICA
+ica.propuesta.detalle.fecceseact= Fecha cese actividades en Bogotá
+ica.propuesta.detalle.feciniact= Fecha de inicio de actividades en Bogotá
+ica.propuesta.detalle.cantesta=Cantidad de establecimientos
+ica.propuesta.detalle.causal=Causal cese de actividades
+ica.propuesta.detalle.regimen=Regimen tributario
+ica.propuesta.detalle.mat=Matrícula mercantil
+ica.propuesta.detalle.codliq=Código liquidación
+ica.propuesta.detalle.orgjuri=Organización jurídica
+ica.propuesta.detalle.edomat=Estado matrícula
+ica.propuesta.detalle.clasiden=Clase identidad sin ánimo de lucro
+
+ica.propuesta.representantes.title=Representantes
+ica.propuesta.representantes.tipiden=Tipo de Identificación
+ica.propuesta.representantes.numide=No. Identificación
+ica.propuesta.representantes.nombre=Nombre
+ica.propuesta.representantes.tiprela=Tipo de relación
+ica.propuesta.representantes.fecdesde=Fecha desde
+ica.propuesta.representantes.fechasta=Fecha hasta
+ica.propuesta.representantes.regresar=Regresar
+ica.propuesta.representantes.presendecla=Presentar Declaración
+ica.propuesta.representantes.rop=ROP
+
+ica.declaracion.title=Declaración ICA
+ica.declaracion.descripcion1=El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos
+ica.declaracion.descripcion2=Si Usted es obligado a estar inscrito en la Cámara de comercio de Bogotá y encuentra inconsistencias en la información, diríjase a ese organismo para el respectivo ajuste. De lo contrario deberá corregir las posibles inconsistencias a través del módulo RIT de esta Oficina Virtual.
+ica.declaracion.table.tipdoc=Tipo de Documento
+ica.declaracion.table.numdoc=Número de Documento
+ica.declaracion.table.nombre=Nombre
+
+ica.declaracion.generales.titulo=Datos Generales
+ica.declaracion.generales.aniograv= Año gravable
+ica.declaracion.generales.periodo= Periodo
+ica.declaracion.generales.opcuso= Opciones de uso
+ica.declaracion.generales.cantesta= Cant. Establecimientos
+ica.declaracion.generales.regimencomun=Régimen común
+ica.declaracion.generales.regsimpli=Régimen simplificado
+ica.declaracion.generales.aporte=¿desea realizar el aporte voluntario del 10%?
+
+ica.declaracion.actidentro.titulo=Actividades económicas Ingresos recibidos en Bogotá
+ica.declaracion.actidentro.acti=Actividad económica principal
+ica.declaracion.actidentro.ciiu=Código CIIU
+ica.declaracion.actidentro.deno=Denominación de actividad económica
+ica.declaracion.actidentro.tarifa=Tarifa
+ica.declaracion.actidentro.inggrav=Ingresos Gravados
+
+ica.declaracion.actifuera.titulo=Actividades económicas Ingresos recibidos fuera de Bogotá
+ica.declaracion.actifuera.ciiu=Código CIIU
+ica.declaracion.actifuera.deno=Denominación de actividad económica
+ica.declaracion.actifuera.codmuni=Código municipio
+ica.declaracion.actifuera.municipio=Municipio
+ica.declaracion.actifuera.ingre=Ingresos
+ica.declaracion.actifuera.descargar=Descargar
+ica.declaracion.actifuera.ayuda=Ayuda ICA
+
+ica.declaracion.total.titulo=Total ingresos gravables
+ica.declaracion.total.vigencia=Vigencia
+ica.declaracion.total.numide=Número de identificación
+ica.declaracion.total.nombre=Nombre o Razón social
+ica.declaracion.total.codciudad=Código de la ciudad
+ica.declaracion.total.nomciudad=Nombre de la ciudad
+ica.declaracion.total.ciiu=Código CIIU
+ica.declaracion.total.valtotaliva=Valor total ingreso bruto sin iva
+ica.declaracion.total.valtotaldev=Valor total devoluciones, rebajas, descuentos
+ica.declaracion.total.descargar=Descargar
+ica.declaracion.total.ayuda=Ayuda ICA
+
+ica.declaracion.valor.titulo=Valor Retenido
+ica.declaracion.valor.vigencia=Vigencia
+ica.declaracion.valor.numide=Número de identificación
+ica.declaracion.valor.nombre=Nombre o Razón social
+ica.declaracion.valor.dane=Código de la ciudad DANE
+ica.declaracion.valor.pagiva=Monto de pago sin iva
+ica.declaracion.valor.taraplicada=Tarifa aplicada
+ica.declaracion.valor.montoret=Monto que retuvieron en el periodo
+ica.declaracion.valor.descargar=Descargar
+ica.declaracion.valor.ayuda=Ayuda ICA
+
+ica.declaracion.deducciones.titulo= Deducciones DB
+ica.declaracion.deducciones.deduccion=Deducción
+ica.declaracion.deducciones.monto=Monto
+
+ica.declaracion.liquidacion.titulo=Liquidación
+ica.declaracion.liquidacion.valtot=Valor total de unidades comerciales adicionales
+ica.declaracion.liquidacion.valexe=Valor de exención
+ica.declaracion.liquidacion.sanciones=Sanciones
+ica.declaracion.liquidacion.intmora=Intereses de Mora
+ica.declaracion.liquidacion.acteco=Actividades económicas secundarias
+ica.declaracion.liquidacion.totinord=Total Ingresos Ordinarios y Extraordinarios de periodo
+ica.declaracion.liquidacion.totinobte=Total ingresos obtenidos fuera del Distrito Capital
+ica.declaracion.liquidacion.totinbrut=Total ingresos brutos obtenidos en el Distrito Capital
+ica.declaracion.liquidacion.devrebdes=Devoluciones, rebajas y descuentos
+ica.declaracion.liquidacion.dedexeact=Deducciones, exenciones y actividades no sujetas
+ica.declaracion.liquidacion.totinnetos=Total ingresos netos gravables
+ica.declaracion.liquidacion.impincom=Impuesto de industria y comercio
+ica.declaracion.liquidacion.impavtableros=Impuesto de acisos y tableros (15% del IC)
+ica.declaracion.liquidacion.totimpcar=Total impuesto a cargo
+ica.declaracion.liquidacion.valret=Valor retenido a título de industria y comercio
+ica.declaracion.liquidacion.totsaldo=Total saldo a cargo
+ica.declaracion.liquidacion.totpag=Total a pagar
+ica.declaracion.liquidacion.totpagvol=Total a pagar con pago voluntario
+ica.declaracion.liquidacion.calcular=Calcular
+
+ica.declaracion.firma.titulo=Firma del representante legal o del Contribuyente (si es persona natural)
+ica.declaracion.firma.obligado=¿Está obligado a firmar la declaración según el numeral 7 del artículo 13 del decreto 807 de 1993?
+ica.declaracion.firma.revisor=Revisor
+ica.declaracion.firma.contador=Contador
+ica.declaracion.firma.tipoien=Tipo de Identificación
+ica.declaracion.firma.numide=No. Identificación
+ica.declaracion.firma.numtarjeta=No. Tarjeta Profesional
+ica.declaracion.firma.nombre=Nombre
+ica.declaracion.firma.regresar=Regresar
+ica.declaracion.firma.prendecla=Presentar Declaración
+ica.declaracion.firma.pagliena=Pagar en línea
+ica.declaracion.firma.rop=Generar ROP
+
+
+
+
+
 
 
 
