Separación de un parrafo entre los titulos para  ica y delineacion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3568,7 +3568,7 @@ delineacion.urbana.basic.fechrevalida=Fecha revalidación
 delineacion.urbana.basic.totalPresupuesto=Total Presupuesto Obra/Construcción
 delineacion.urbana.basic.valorEjecutado=Valor Ejecutado Obra/Construcción
 delineacion.urbana.basic.fechfinobra=Fecha fin obra
-delineacion.urbana.basic.fechaInicioObra=Fecha Inicio Obra
+delineacion.urbana.basic.fechaInicioObra=Fecha ejecutoría Obra
 delineacion.urbana.basic.curaduria=Curaduría
 delineacion.urbana.basic.codigoEstrato=Código de Estrato
 delineacion.urbana.basic.detalleRadicado=Detalle Radicado
@@ -3603,7 +3603,7 @@ delineacion.urbana.dec.generales.radic=Radicados
 
 delineacion.urbana.dec.areasusos.title= Información de Área y Uso
 delineacion.urbana.dec.areasusos.uso=Uso
-delineacion.urbana.dec.areasusos.areauso=Área de uso
+delineacion.urbana.dec.areasusos.areauso=Código de uso
 delineacion.urbana.dec.areasusos.numunidades=No. de Unidades
 delineacion.urbana.dec.areasusos.netuso=Área neta por uso
 delineacion.urbana.dec.areasusos.areainve=Área Intervenida
@@ -3616,6 +3616,8 @@ delineacion.urbana.dec.areasusos.fechultabo= Fecha de último abono en cuenta
 delineacion.urbana.dec.areasusos.fechejec=Fecha de Ejecutoria
 delineacion.urbana.dec.areasusos.preobra= Presupuesto de Obra
 delineacion.urbana.dec.areasusos.cauexen= Causal de exención
+delineacion.urbana.dec.areasusos.arnetpro= Áreas del proyecto Arquitectonico
+delineacion.urbana.dec.areasusos.fecfinalobra= Fecha de finalización de obra
 
 delineacion.urbana.dec.liqpriv.title=Liquidación
 delineacion.urbana.dec.liqpriv.totobrcons=Total Presupuesto de Obra o construcción
