cambios en gasolina add botones para eliminar y agregar filas en la declaración y se corrige la etiqueta de carburizante a carburante

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3410,7 +3410,7 @@ impuestos.decGasolina.InformacionDec.titulo = Información de la Declaración
 impuestos.decGasolina.InformacionDec.claseProducto = Clase de Producto*:
 impuestos.decGasolina.InformacionDec.galones = Galones Gravados*:
 impuestos.decGasolina.InformacionDec.preciosReferencia = Precios de Referencia
-impuestos.decGasolina.InformacionDec.porcentajeAlcohol = Alcohol carburizante%*
+impuestos.decGasolina.InformacionDec.porcentajeAlcohol = Alcohol carburante%*
 impuestos.decGasolina.InformacionDec.baseGravable = Base Gravable*
 impuestos.decGasolina.InformacionDec.valorSobretasa = Valor de Sobretasa*
 impuestos.decGasolina.InformacionDec.agregarDec = +
