Agentes Retenedores y estilo de buscar

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4187,7 +4187,7 @@ ica.declaracion.firma.titulo=Firma del representante legal o del Contribuyente (
 ica.declaracion.firma.obligado=¿Está obligado a firmar la declaración según el numeral 7 del artículo 13 del decreto 807 de 1993?
 ica.declaracion.firma.revisor=Revisor
 ica.declaracion.firma.contador=Contador
-ica.declaracion.firma.tipoien=Tipo de Identificación
+ica.declaracion.firma.tipoiden=Tipo de Identificación
 ica.declaracion.firma.numide=No. Identificación
 ica.declaracion.firma.numtarjeta=No. Tarjeta Profesional
 ica.declaracion.firma.nombre=Nombre
@@ -4196,8 +4196,32 @@ ica.declaracion.firma.prendecla=Presentar Declaración
 ica.declaracion.firma.pagliena=Pagar en línea
 ica.declaracion.firma.rop=Generar ROP
 
+#Agente Retenedor
+retenedor.servicio.titulo=Mis actividades ReteICA
+retenedor.servicio.descripcion=El sistema de retenciones aplica al impuesto de Industria y Comercio, teniendo en cuenta las normas específicas adoptadas por el Distrito Capital y las generales del sistema de retenciones sobre el impuesto de renta y complementarios.
+retenedor.servicio.tipdoc=Tipo de Documento
+retenedor.servicio.numdoc=Número de Documento
+retenedor.servicio.nombre= Nombre
 
+retenedor.servicio.principales.titulo= Datos Principales
+retenedor.servicio.principales.tipdoc=Tipo de Documento
+retenedor.servicio.principales.numdoc=No. de Documento
+retenedor.servicio.principales.nombre=Nombre o Razón Social
+retenedor.servicio.principales.calagente=Calidad Agente
+retenedor.servicio.principales.fecdesde=Fecha desde
+retenedor.servicio.principales.fechasta=Fecha hasta
 
+retenedor.servicio.representantes.titulo=Representantes
+retenedor.servicio.representantes.tipiden=Tipo de Identificación
+retenedor.servicio.representantes.numiden=No. Identificación
+retenedor.servicio.representantes.nombre=Nombre
+retenedor.servicio.representantes.tiprela=Tipo de Relación
+retenedor.servicio.representantes.fecdesde=Fecha desde
+retenedor.servicio.representantes.fechasta=Fecha hasta
+retenedor.servicio.representantes.fuentedato=Fuente dato
+retenedor.servicio.representantes.regresar=Regresar
+retenedor.servicio.representantes.gendecla=Generar Declaración
+retenedor.servicio.representantes.paglinea=Pago en Línea
 
 
 
