--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4223,6 +4223,17 @@ retenedor.servicio.representantes.regresar=Regresar
 retenedor.servicio.representantes.gendecla=Generar Declaración
 retenedor.servicio.representantes.paglinea=Pago en Línea
 
+#Tercero Autorizado
+tercero.reportar.inicial.titulo=Entidades Bancarias
+tercero.reportar.inicial.descripcion= Desde el año 2008 y en el marco del plan estratégico la Dirección de Impuestos de Bogotá se incluyó en el desarrollo del Sistema Tributario SIT II un componente de recepción de información tributaria, encargada de recibir, validar, generar reportes de aceptación o rechazo y cargar en la base de datos tributaria la información transmitida magnéticamente a través de la web, por las entidades bancarias que tienen convenio vigente con la Secretaria Distrital de Hacienda, para la recepción de los tributos distritales.
+tercero.reportar.reportar.titulo= Reportar Información
+tercero.reportar.reportar.nota= ¡Bienvenido a esta sección! Aquí subirás los archivos que se van a transmitir para iniciar el proceso de validación.
+tercero.reportar.info.titulo=Información del archivo
+tercero.reportar.info.tiparch=Tipo de archivo
+tercero.reportar.info.selarch=Seleccionar Archivo
+tercero.reportar.info.regresar=Regresar
+tercero.reportar.info.cancelar=Cancelar
+tercero.reportar.info.enviar=Enviar
 
 
 
