agentes retenedores vistas

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4223,6 +4223,45 @@ retenedor.servicio.representantes.regresar=Regresar
 retenedor.servicio.representantes.gendecla=Generar Declaración
 retenedor.servicio.representantes.paglinea=Pago en Línea
 
+retenedor.registro.inicial.titulo=Mis Actividades ReteICA
+retenedor.registro.inicial.descrip=El sistema de retenciones se rige en lo aplicable a la naturaleza del impuesto de Industria y Comercio por las normas específicas adoptadas por el Distrito Capital y las generales del sistema de retenciones aplicables al impuesto sobre la renta y complementarios. Más información
+retenedor.registro.inicial.nota=Bienvenido a Registro de Retenciones, en esta sección darás de alta tus obligaciones ante la Secretaría Distrital de Hacienda de Bogotá.
+retenedor.registro.inicial.registro=Registro de retenciones
+retenedor.registro.inicial.descarga= 1. Descarga el siguiente archivo Excel a tu computador
+retenedor.registro.inicial.descargar=Descargar
+retenedor.registro.inicial.agrega=2. Agrega las retenciones que necesitas registrar.
+retenedor.registro.inicial.guarda= 3. Guarda el archivo en formato .csv y sin cambiar el nombre.
+retenedor.registro.inicial.adjunta= 4. Adjúntalo nuevamente.
+retenedor.registro.inicial.seleccionar=Selecciona el archivo
+retenedor.registro.inicial.devolucion=Devolución de Retenciones
+retenedor.registro.inicial.devolporrete=¿Tienes devoluciones por retenciones?
+retenedor.registro.inicial.devoldescarga=Descarga el siguiente archivo y registra la información correspondiente.
+retenedor.registro.inicial.devoldescargar=Descargar
+retenedor.registro.inicial.delfina=Al finalizar, adjunta nuevamente el formato.
+retenedor.registro.inicial.devolseleccionar=Selecciona el archivo
+retenedor.registro.inicial.actualizar=Actualizar
+retenedor.registro.inicial.consulta=Consulta descargas
+
+retenedor.edocargas.inicial.titulo=Mis actividades ReteICA
+retenedor.edocargas.inicial.descripcion=El sistema de retenciones se rige en lo aplicable a la naturaleza del impuesto de Industria y Comercio por las normas específicas adoptadas por el Distrito Capital y las generales del sistema de retenciones aplicables al impuesto sobre la renta y complementarios. Más información
+retenedor.edocargas.inicial.edocargas=Estado de cargas
+retenedor.edocargas.inicial.nota=Para continuar con tu declaración, es importante que tus archivos de carga se procesen correctamente (Estado: Aceptado). Si tu archivo fue "Rechazado", podrás descargar los errores que hayas tenido para cargarlo nuevamente.
+retenedor.edocargas.inicial.feccarga=Fecha de Carga
+retenedor.edocargas.inicial.edo=Estado
+retenedor.edocargas.inicial.detalle=Detalle
+retenedor.edocargas.inicial.regresar=Regresar
+
+retenedor.declarfirmar.inicial.titulo=Mis actividades ReteICA
+retenedor.declarfirmar.inicial.descripcion=El sistema de retenciones aplica al impuesto de Industria y Comercio, teniendo en cuenta las normas específicas adoptadas por el Distrito Capital y las generales del sistema de retenciones sobre el impuesto de renta y complementarios. Más información
+retenedor.declarfirmar.inicial.decfirmar=Declaraciones por firmar
+retenedor.declarfirmar.inicial.declaracion=Declaración
+retenedor.declarfirmar.inicial.ani=Año Gravable
+retenedor.declarfirmar.inicial.periodo=Periodo
+retenedor.declarfirmar.inicial.selccionar=Seleccionar
+retenedor.declarfirmar.inicial.regresar=Regresar
+retenedor.declarfirmar.inicial.firmar=Firmar
+
+
 #Tercero Autorizado
 tercero.reportar.inicial.titulo=Entidades Bancarias
 tercero.reportar.inicial.descripcion= Desde el año 2008 y en el marco del plan estratégico la Dirección de Impuestos de Bogotá se incluyó en el desarrollo del Sistema Tributario SIT II un componente de recepción de información tributaria, encargada de recibir, validar, generar reportes de aceptación o rechazo y cargar en la base de datos tributaria la información transmitida magnéticamente a través de la web, por las entidades bancarias que tienen convenio vigente con la Secretaria Distrital de Hacienda, para la recepción de los tributos distritales.
