Botón para regresar en certifica declaración y certificación pago.

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3789,6 +3789,7 @@ certificacion.inicial.aniograv= Año Gravable
 certificacion.inicial.periodo= Periodo
 certificacion.inicial.cancelar= Cancelar
 certificacion.inicial.generar= Generar
+certificacion.inicial.regresar = Regresar
 
 certificacion.inicial.predio.chip = CHIP
 certificacion.inicial.predio.matricula = Matrícula Inmobiliaría
