--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3808,30 +3808,137 @@ certificacion.inicial.publicidad.numresol= Número de Resolución
 certificacion.inicial.publicidad.tipvalla= Tipo de Valla
 certificacion.inicial.publicidad.seleccionar= Seleccionar
 
+obligacion.inicial.encabezado= Obligaciones Pendientes
+obligacion.inicial.descripcion=Este servicio te permitirá consultar las obligaciones pendientes que tienes como contribuyente respecto a los impuestos administrados por la Dirección Distrital de Impuestos de Bogotá.
 obligacion.inicial.titulo= Obligaciones Pendientes
-obligacion.inicial.tipo= Tipo de certificación
+obligacion.inicial.buscarpor= ¿Cómo deseas buscar tus obligaciones pendientes?
+obligacion.inicial.sujeto=Sujeto
+obligacion.inicial.impu=Impuesto
+
+obligacion.sujeto.regresar=Regresar
+obligacion.sujeto.descargar=Descargar PDF
+obligacion.sujeto.vigencia=Consulta otra vigencia
+obligacion.sujeto.buscar=Buscar
+
+obligacion.sujeto.predial.titulo=Predial unificado
+obligacion.sujeto.predial.chip=CHIP
+obligacion.sujeto.predial.matin=Matrícula Inmobiliaría
+obligacion.sujeto.predial.direccion=Dirección
+obligacion.sujeto.predial.aniograv=Año Gravable
+obligacion.sujeto.predial.edoobliga=Estado de Obligación
+obligacion.sujeto.predial.obligacion=Obligación
+obligacion.sujeto.predial.actooficial=Acto Oficial
+obligacion.sujeto.predial.genrop=Generar ROP
+obligacion.sujeto.predial.paglinea=Pago en Línea
+
+obligacion.sujeto.ica.titulo=ICA
+obligacion.sujeto.ica.numide=Número de Identificación
+obligacion.sujeto.ica.tipiden=Tipo de Identificación
+obligacion.sujeto.ica.aniograv=Año Gravable
+obligacion.sujeto.ica.periodo=Periodo
+obligacion.sujeto.ica.edoobliga=Estado de Obligación
+obligacion.sujeto.ica.obligacion=Obligación
+obligacion.sujeto.ica.actooficial=Acto Oficial
+obligacion.sujeto.ica.genrop=Generar ROP
+obligacion.sujeto.ica.paglinea=Pago en Línea
+
+obligacion.sujeto.vehiculos.titulo=Vehícular
+obligacion.sujeto.vehiculos.numide=Número de Identificación
+obligacion.sujeto.vehiculos.tipiden=Tipo de Identificación
+obligacion.sujeto.vehiculos.aniograv=Año Gravable
+obligacion.sujeto.vehiculos.periodo=Periodo
+obligacion.sujeto.vehiculos.edoobliga=Estado de Obligación
+obligacion.sujeto.vehiculos.obligacion=Obligación
+obligacion.sujeto.vehiculos.actooficial=Acto Oficial
+obligacion.sujeto.vehiculos.genrop=Generar ROP
+obligacion.sujeto.vehiculos.paglinea=Pago en Línea
+
+obligacion.sujeto.gasolina.titulo=Sobretasa a la Gasolina
+obligacion.sujeto.gasolina.numide=Número de Identificación
+obligacion.sujeto.gasolina.tipiden=Tipo de Identificación
+obligacion.sujeto.gasolina.aniograv=Año Gravable
+obligacion.sujeto.gasolina.periodo=Periodo
+obligacion.sujeto.gasolina.edoobliga=Estado de Obligación
+obligacion.sujeto.gasolina.obligacion=Obligación
+obligacion.sujeto.gasolina.actooficial=Acto Oficial
+obligacion.sujeto.gasolina.genrop=Generar ROP
+obligacion.sujeto.gasolina.paglinea=Pago en Línea
+
+obligacion.sujeto.delurbana.titulo=Delienación urbana
+obligacion.sujeto.delurbana.numide=Número de Identificación
+obligacion.sujeto.delurbana.tipiden=Tipo de Identificación
+obligacion.sujeto.delurbana.aniograv=Año Gravable
+obligacion.sujeto.delurbana.periodo=Periodo
+obligacion.sujeto.delurbana.edoobliga=Estado de Obligación
+obligacion.sujeto.delurbana.obligacion=Obligación
+obligacion.sujeto.delurbana.actooficial=Acto Oficial
+obligacion.sujeto.delurbana.genrop=Generar ROP
+obligacion.sujeto.delurbana.paglinea=Pago en Línea
+
+obligacion.sujeto.publiext.titulo=Publicidad Exterior
+obligacion.sujeto.publiext.noresol=Número de Resolución
+obligacion.sujeto.publiext.dirvalla=Dirección de la valla
+obligacion.sujeto.publiext.orvalla=Orientación de la valla
+obligacion.sujeto.publiext.numide=Número de Identificación
+obligacion.sujeto.publiext.tipiden=Tipo de Identificación
+obligacion.sujeto.publiext.aniograv=Año Gravable
+obligacion.sujeto.publiext.periodo=Periodo
+obligacion.sujeto.publiext.edoobliga=Estado de Obligación
+obligacion.sujeto.publiext.obligacion=Obligación
+obligacion.sujeto.publiext.actooficial=Acto Oficial
+obligacion.sujeto.publiext.genrop=Generar ROP
+obligacion.sujeto.publiext.paglinea=Pago en Línea
+
 obligacion.inicial.selcimpuesto= Impuesto
-obligacion.inicial.aniograv= Año Gravable
 obligacion.inicial.periodo= Periodo
 obligacion.inicial.cancelar= Cancelar
-obligacion.inicial.generar= Generar
+obligacion.inicial.buscar= Buscar
 
 obligacion.inicial.predio.chip = CHIP
 obligacion.inicial.predio.matricula = Matrícula Inmobiliaría
 obligacion.inicial.predio.direccion = Dirección del Predio
-obligacion.inicial.predio.seleccionar = Seleccionar
+obligacion.inicial.predio.visualizar = Visualizar
+obligacion.inicial.predio.pdf=Descargar PDF 
+obligacion.inicial.predio.aniograv= Año Gravable
+obligacion.inicial.predio.fecreporte=Fecha reporte
 
 obligacion.inicial.vehiculo.placa= Placa
+obligacion.inicial.vehiculo.modelo= Modelo
 obligacion.inicial.vehiculo.marca= Marca
-obligacion.inicial.vehiculo.seleccionar= Seleccionar
+obligacion.inicial.vehiculo.linea= Línea
+obligacion.inicial.vehiculo.visualizar= Visualizar
+obligacion.inicial.vehiculo.pdf=Descargar PDF 
+obligacion.inicial.vehiculo.aniograv= Año Gravable
+obligacion.inicial.vehiculo.fecreporte=Fecha reporte
 
-obligacion.inicial.ica.tipdocu= Tipo de Documento
-obligacion.inicial.ica.numdocu= Número de Documento
-obligacion.inicial.ica.seleccionar= Seleccionar
+obligacion.inicial.ica.tipdocu= Tipo de Identificación
+obligacion.inicial.ica.numdocu= Número de Identificación
+obligacion.inicial.ica.visualizar= Visualizar
+obligacion.inicial.ica.pdf=Descargar PDF 
+obligacion.inicial.ica.aniograv= Año Gravable
+obligacion.inicial.ica.fecreporte=Fecha reporte
 
 obligacion.inicial.publicidad.numresol= Número de Resolución
 obligacion.inicial.publicidad.tipvalla= Tipo de Valla
-obligacion.inicial.publicidad.seleccionar= Seleccionar
+obligacion.inicial.publicidad.visualizar= Visualizar
+obligacion.inicial.publicidad.pdf=Descargar PDF 
+obligacion.inicial.publicidad.aniograv= Año Gravable
+obligacion.inicial.publicidad.fecreporte=Fecha reporte
+
+obligacion.inicial.gasolina.tipiden=Tipo de Identificación
+obligacion.inicial.gasolina.numiden=Número de Identificación
+obligacion.inicial.gasolina.visualizar=Visualizar
+obligacion.inicial.gasolina.pdf=Descargar PDF 
+obligacion.inicial.gasolina.aniograv= Año Gravable
+obligacion.inicial.gasolina.fecreporte=Fecha reporte
+
+obligacion.inicial.delineacion.cdu=CDU
+obligacion.inicial.delineacion.licconstr=Licencia de Construcción
+obligacion.inicial.delineacion.direccion=Dirección
+obligacion.inicial.delineacion.visualizar=Visualizar
+obligacion.inicial.delineacion.pdf=Descargar PDF 
+obligacion.inicial.delineacion.aniograv= Año Gravable
+obligacion.inicial.delineacion.fecreporte=Fecha reporte
 
 
 relacion.inicial.titulo= Relación de Pagos
