Cambios para delineacion urbana

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2078,6 +2078,8 @@ delineacion.urbana.radicados.question1= ¿Es una retención?
 delineacion.urbana.radicados.radicados= Radicados
 delineacion.urbana.radicados.fechradicado= Fecha Radicado
 delineacion.urbana.radicados.modlicencia= Modalidad licencia
+delineacion.urbana.radicados.presupuestoRadicado= Presupuesto por radicado
+delineacion.urbana.radicados.codigoEstrato= Código de estrato
 delineacion.urbana.radicados.seleccionar= Seleccionar
 delineacion.urbana.radicados.regresar= Regresar
 delineacion.urbana.radicados.retencion= Presentar retención
@@ -3325,6 +3327,9 @@ consultas.estadoDeCuenta.Periodo = Periodo*:
 consultas.estadoDeCuenta.cancelar = Cancelar
 consultas.estadoDeCuenta.generarEstadoCuenta = Generar
 #->FIN dev-federico 11/02/2019 textos para Consulta de estado de cuenta
+#->INI dev-federico 12/04/2019 textos para Delineacion urbana
+error.impuestoDelineacion.radicaDelin.error1
+#->FIN dev-federico 12/04/2019 textos para Delineacion urbana
 impuestos.Pago.PSE.imprimirComprobante = Imprimir Comprobante
 impuestos.Pago.PSE.continuar = Continuar
 error.Pago.PSE.error1 = Error al leer detalle de pago: {0}
@@ -3354,8 +3359,8 @@ delineacion.urbana.basic.numresolurevalida=Resolución revalidación
 delineacion.urbana.basic.tipomarca= Tipo de marca
 delineacion.urbana.basic.marca=Marca
 delineacion.urbana.basic.numresoprorroga=Resolución prórroga
-delineacion.urbana.basic.fechrexpe=Fecha de expedición
-delineacion.urbana.basic.fechrevalida=Fecha revalidación
+delineacion.urbana.basic.fechrexpe=Fecha expedición
+delineacion.urbana.basic.fechrevalida=Fecha ejecutoría revalidación
 delineacion.urbana.basic.totalPresupuesto=Total Presupuesto Obra/Construcción
 delineacion.urbana.basic.valorEjecutado=Valor Ejecutado Obra/Construcción
 delineacion.urbana.basic.fechfinobra=Fecha fin obra
