Se agrega, delineación urbana a la vista de presentar declaración, certificación de pagos y certificaciones de declaración

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3304,6 +3304,16 @@ impuestos.presentarDeclaracion.anioGravableConsultar = Año gravable
 impuestos.presentarDeclaracion.Periodo = Periodo
 impuestos.presentarDeclaracion.PresentarDeclaracion = Presentar Declaración
 #->FIN dev-federico 7/02/2019 textos para Presentar Declaración
+#->INI dev-maria 18/04/2019 textos para Presentar Declaración
+impuestos.presentarDeclaracion.deliur.cdu=CDU
+impuestos.presentarDeclaracion.deliur.tipobli=Tipo de obligación
+impuestos.presentarDeclaracion.deliur.tiplic=Tipo de licencia
+impuestos.presentarDeclaracion.deliur.prendecla=Presentar declaración
+impuestos.presentarDeclaracion.deliur.radic=Radicados
+impuestos.presentarDeclaracion.deliur.prereten=Presentar retención
+#->FIN dev-maria 18/04/2019 textos para Presentar Declaración
+
+
 #->INI dev-federico 7/02/2019 textos para Manejo de errores en sobre tasa a gasolina
 error.impuestoGasolina.sobretasa.error1 = Error al leer detalle de gasolina {0}
 error.impuestoGasolina.sobretasa.error2 = Error al leer información del Contribuyente
@@ -3812,6 +3822,15 @@ certificacion.inicial.ica.seleccionar= Seleccionar
 certificacion.inicial.publicidad.numresol= Número de Resolución
 certificacion.inicial.publicidad.tipvalla= Tipo de Valla
 certificacion.inicial.publicidad.seleccionar= Seleccionar
+
+#->INI dev-maria 18/04/2019 textos para Certificación de Declaración
+certificacion.inicial.deliur.cdu=CDU
+certificacion.inicial.deliur.tipobli=Tipo de obligación
+certificacion.inicial.deliur.tiplic=Tipo de licencia
+certificacion.inicial.deliur.prendecla=Presentar declaración
+certificacion.inicial.deliur.radic=Radicados
+certificacion.inicial.deliur.prereten=Presentar retención
+#->FIN dev-maria 18/04/2019 textos para Certificación de Declaración
 
 obligacion.inicial.encabezado= Obligaciones Pendientes
 obligacion.inicial.descripcion=Este servicio te permitirá consultar las obligaciones pendientes que tienes como contribuyente respecto a los impuestos administrados por la Dirección Distrital de Impuestos de Bogotá.
