Delineacion Urbana, objetos para pantalla principal, CDUs, Radicados, Retencion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2074,7 +2074,7 @@ delineacion.urbana.detail.paymentRelations.VP-valueToPay=VP - Valor a Pagar
 delineacion.urbana.detail.paymentRelations.IM-arrearsInterests=IM - Intereses de Mora
 delineacion.urbana.detail.paymentRelations.TP-totalToPay=TP - Total a Pagar
 
-delineacion.urbana.radicados.question1= ¿Es una retención?
+delineacion.urbana.radicados.question1= ¿Es un anticipo?
 delineacion.urbana.radicados.radicados= Radicados
 delineacion.urbana.radicados.fechradicado= Fecha Radicado
 delineacion.urbana.radicados.modlicencia= Modalidad licencia
